# Projet-GLCS-2020-2021

./: CMakeLists.txt  simpleheat.cpp
baselib/: CMakeLists.txt
baselib/include/: cartesiandistribution2d.hpp  configuration.hpp  distributed2dfield.hpp  fieldreductor.hpp  initialconditionner.hpp  simulation.hpp  simulationobserver.hpp  timestep.hpp
baselib/src/: cartesiandistribution2d.cpp  distributed2dfield.cpp  simulation.cpp
configReader/: CMakeLists.txt
configReader/include/: configReader.hpp
configReader/src/: configReader.cpp
heatReductor/: CMakeLists.txt
heatReductor/include/: heatreductor.hpp
heatReductor/src/: heatreductor.cpp
heatlib/: CMakeLists.txt
heatlib/include/: fileconditions.hpp  finitediffheatsolver.hpp  fixedconditions.hpp
heatlib/src/: filecondition.cpp  finitediffheatsolver.cpp  fixedconditions.cpp
printlib/: CMakeLists.txt
printlib/include/: HDF5printer.hpp  meanprinter.hpp  printer.hpp
printlib/src/: HDF5printer.cpp  meanprinter.cpp
simpleui/include/: commandlineconfig.hpp  screenprinter.hpp
simpleui/src/: commandlineconfig.cpp  screenprinter.cpp
